--- a/authorizer-app/src/assets/i18n/auth/en-GB.json
+++ b/authorizer-app/src/assets/i18n/auth/en-GB.json
@@ -2,7 +2,7 @@
   "LOGIN_PAGE": {
     "title": "Login",
     "subtitle": "Log in to REST Source Authorizer App",
-    "description": "With this app you can link participants from RADAR-base Management Portal to External Device APIs (e.g. Fitbit, Withings and ...)",
+    "description": "With this app you can link subjects from RADAR-base Management Portal to External Device APIs (e.g. Fitbit, Withings and ...)",
     "loginButton": "Login with Management Portal"
   },
   "ERROR": {
