Modify language files

--- a/authorizer-app/src/assets/i18n/auth/nl.json
+++ b/authorizer-app/src/assets/i18n/auth/nl.json
@@ -1,7 +1,7 @@
 {
   "LOGIN_PAGE": {
     "title": "Log in",
-    "subtitle": "Log in op de External Device Authorizer-app",
+    "subtitle": "Log in op de REST Source Authorizer App",
     "description": "Met deze app kun je deelnemers uit de RADAR-base Management Portal koppelen aan externe apparaat-API's (bijv. Fitbit, Withings en ...)",
     "loginButton": "Inloggen met Management Portal"
   },
