--- a/authorizer-app/src/assets/i18n/admin/en-US.json
+++ b/authorizer-app/src/assets/i18n/admin/en-US.json
@@ -66,7 +66,7 @@
     },
     "DELETE": {
       "title": "Warning!",
-      "desc": "You are going to unlink the Subject from the external device",
+      "desc": "You are going to unlink the Subject from its {{sourceType}} account",
       "warningMessage": "Are you sure?",
       "deletingButton": "Deleting"
     },
