--- a/authorizer-app/src/assets/i18n/auth/nl.json
+++ b/authorizer-app/src/assets/i18n/auth/nl.json
@@ -1,6 +1,6 @@
 {
   "LOGIN_PAGE": {
-    "title": "Log in",
+    "title": "Inloggen",
     "subtitle": "Log in op de REST Source Authorizer App",
     "description": "Met deze app kun je deelnemers uit de RADAR-base Management Portal koppelen aan externe apparaat-API's (bijv. Fitbit, Withings en ...)",
     "loginButton": "Inloggen met Management Portal"
